# project_infa

./: AnaliticGeometry.cpp  AnaliticGeometry.h  CMakeLists.txt  Component.cpp  Components.cpp  Components.h  ConverterPairToVector2.h  Dot.cpp  Dot.h  Drawing.cpp  Extractors.cpp  Extractors.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  IsIn.cpp  IsIn.h  Makefile  Physics.cpp  Physics.h  README.md  Rendering.cpp  Rendering.h  Sprite.h  StupidDrawMe.cpp  StupidDrawMe.h  StupidObject.cpp  StupidRendering.cpp  StupidRendering.h  Triangle.h  Window.h  WorkWithPairs.cpp  WorkWithPairs.h  allLibrares.h  allLibraries.h  drawAll.cpp  drawAll.h  drawLines.cpp  drawLines.h  (+9 more)
Drawing/: Rendering.cpp  Sprite.h  StupidDrawMe.cpp  StupidDrawMe.h  StupidRendering.cpp  Window.h  drawAll.cpp  drawAll.h  drawLines.cpp
Logic/: ConverterPairToVector2.h  Extractors.cpp  Extractors.h  IsIn.cpp  IsIn.h  WorkWithPairs.cpp
Logic/UserAPI/: UserAPI.cpp  UserAPI.h
Physics/: AnaliticGeometry.cpp  AnaliticGeometry.h  Physics.cpp  Physics.h  Physics2.0.cpp  Physics2.0.h
Python/Test/: Test.cpp
Resources/: Components.cpp  Components.h  Dot.h  Game.cpp  Game.h  GameObject.h  Triangle.h  resources.h  simpleFactory.cpp  simpleFactory.h
Test/: Test
